feat: add API endpoints for retrieving routes and stops, enhance GTFS data loading with error handling

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,23 @@
 backend/services/gtfs_data
 backend/__pycache__
+backend/api/__pycache__
+backend/api/__pycache__/__init__.cpython-313.pyc
+backend/services/__pycache__
+**/__pycache__/
+**/*.pyc
+.venv/
+env/
+venv/
+.vscode/
+.idea/
+*.log
+.DS_Store
+Thumbs.db
+*.so
+*.dll
+*.dylib
+htmlcov/
+.coverage
+.coverage.*
+.ipynb_checkpoints/
+.env
