feat: implement real-time vehicle position retrieval and parsing

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,27 @@
-backend/services/gtfs_data
 backend/__pycache__
 backend/api/__pycache__
 backend/api/__pycache__/__init__.cpython-313.pyc
 backend/services/__pycache__
+backend/services/static/__pycache__
+backend/services/static/gtfs_data
 **/__pycache__/
 **/*.pyc
 .venv/
 env/
 venv/
+.vscode/
+.idea/
+*.log
+.DS_Store
+Thumbs.db
+*.so
+*.dll
+*.dylib
+htmlcov/
+.coverage
+.coverage.*
+.ipynb_checkpoints/
+.env
 .vscode/
 .idea/
 *.log
