--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/leaflet": "^1.9.16",
+    "leaflet": "^1.9.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-leaflet": "^4.2.1",
+    "react-leaflet-markercluster": "^5.0.0-rc.0",
     "react-router-dom": "^7.1.3"
   },
   "devDependencies": {
