--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,13 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.1.1",
     "@types/leaflet": "^1.9.16",
+    "class-variance-authority": "^0.7.1",
     "leaflet": "^1.9.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-leaflet": "^4.2.1",
     "react-leaflet-markercluster": "^5.0.0-rc.0",
-    "react-router-dom": "^7.1.3"
+    "react-router-dom": "^7.1.3",
+    "styled-components": "^6.1.14",
+    "tailwind-variants": "^0.3.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
