--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,23 @@ backend/api/__pycache__
 backend/api/__pycache__/__init__.cpython-313.pyc
 backend/services/__pycache__
 backend/services/static/__pycache__
-backend/services/static/gtfs_data
+backend/services/static/gtfs_data/bus/agency.txt
+backend/services/static/gtfs_data/bus/calendar.txt
+backend/services/static/gtfs_data/bus/calendar_dates.txt
+backend/services/static/gtfs_data/bus/routes.txt
+backend/services/static/gtfs_data/bus/shapes.txt
+backend/services/static/gtfs_data/bus/stop_times.txt
+backend/services/static/gtfs_data/bus/stops.txt
+backend/services/static/gtfs_data/bus/trips.txt
+backend/services/static/gtfs_data/tram/trips.txt
+backend/services/static/gtfs_data/tram/stops.txt
+backend/services/static/gtfs_data/tram/stop_times.txt
+backend/services/static/gtfs_data/tram/shapes.txt
+backend/services/static/gtfs_data/tram/routes.txt
+backend/services/static/gtfs_data/tram/calendar_dates.txt
+backend/services/static/gtfs_data/tram/calendar.txt
+backend/services/static/gtfs_data/tram/agency.txt
+backend/services/static/gtfs_data/tram/feed_info.txt
 backend/services/gtfs_realtime_pb2.py
 backend/services/realtime/realtime_data/vehicle_positions_t.pb
 backend/services/realtime/realtime_data/vehicle_positions_a.pb
